re PR c/21419 (Accepts writting to const via asm)

gcc:
2005-09-30  Paolo Bonzini  <bonzini@gnu.org>

	PR c/21419
	* gimplify.c (gimplify_asm_expr): Raise an error if an output is
	read-only.

testsuite:
2005-09-30  Paolo Bonzini  <bonzini@gnu.org>

	PR c/21419
	* gcc.dg/pr21419.c: New test.

From-SVN: r104815